--- a/src/html/studyreport_overall.html
+++ b/src/html/studyreport_overall.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="../css/app.css" id="maincss">
   <link rel="stylesheet" href="../css/theme-e.css">
   <!-- endbuild -->
-
+  <link rel="stylesheet" href="../css/wj.css">
 
 
 
@@ -199,105 +199,115 @@
         </div>
         <div class="row">
           <div class="col-lg-4">
-            <div class="panel widget bg-green">
-              <div class="row row-table">
-                <div class="col-xs-4 text-center bg-green-dark pv-lg">
-                  <em class="icon-people fa-3x"></em>
-                </div>
-                <div class="col-xs-8 pv-lg">
-                  <div class="h2 mt0">66
-                    <small>人</small>
+            <a class="nodecation" href="./studentmanagement_list.html">
+              <div class="panel widget bg-green">
+                <div class="row row-table">
+                  <div class="col-xs-4 text-center bg-green-dark pv-lg">
+                    <em class="icon-people fa-3x"></em>
                   </div>
-                  <div class="text-uppercase">我的学员</div>
+                  <div class="col-xs-8 pv-lg">
+                    <div class="h2 mt0">66
+                      <small>人</small>
+                    </div>
+                    <div class="text-uppercase">我的学员</div>
+                  </div>
                 </div>
               </div>
-            </div>
+            </a>
           </div>
           <div class="col-lg-4">
-            <div class="panel widget bg-warning">
-              <div class="row row-table">
-                <div class="col-xs-4 text-center bg-warning-dark pv-lg">
-                  <em class="icon-logout fa-3x"></em>
-                </div>
-                <div class="col-xs-8 pv-lg">
-                  <div class="h2 mt0">5
-                    <small>人</small>
+            <a class="nodecation" href="./studyreport_overall_expirylist.html">
+              <div class="panel widget bg-warning">
+                <div class="row row-table">
+                  <div class="col-xs-4 text-center bg-warning-dark pv-lg">
+                    <em class="icon-logout fa-3x"></em>
                   </div>
-                  <div class="text-uppercase">即将到期</div>
+                  <div class="col-xs-8 pv-lg">
+                    <div class="h2 mt0">5
+                      <small>人</small>
+                    </div>
+                    <div class="text-uppercase">即将到期</div>
+                  </div>
                 </div>
               </div>
-            </div>
+            </a>
           </div>
           <div class="col-lg-4">
-            <div class="panel widget bg-primary">
-              <div class="row row-table">
-                <div class="col-xs-4 text-center bg-primary-dark pv-lg">
-                  <em class="icon-user-follow fa-3x"></em>
-                </div>
-                <div class="col-xs-8 pv-lg">
-                  <div class="h2 mt0">100
-                    <small>人</small>
+            <a class="nodecation" href="./studyreport_overall_experiencelist.html">
+              <div class="panel widget bg-primary">
+                <div class="row row-table">
+                  <div class="col-xs-4 text-center bg-primary-dark pv-lg">
+                    <em class="icon-user-follow fa-3x"></em>
                   </div>
-                  <div class="text-uppercase">体验学员</div>
+                  <div class="col-xs-8 pv-lg">
+                    <div class="h2 mt0">100
+                      <small>人</small>
+                    </div>
+                    <div class="text-uppercase">体验学员</div>
+                  </div>
                 </div>
               </div>
-            </div>
+            </a>
           </div>
         </div>
 
         <div class="row">
           <div class="col-lg-12">
-            <div id="" class="panel panel-primary">
-              <div class="panel-heading">今日学况</div>
-              <div class="panel-body">
-                <div class="col-lg-3 col-sm-6">
-                  <div class="panel widget">
-                    <div class="panel-body text-center">
-                      <div class="text-right text-muted">
-                        <em class="icon-user-unfollow fa-2x"></em>
+            <a class="nodecation normalcolor" href="./studyreport_overall_todaystudylist.html">
+              <div id="" class="panel panel-primary">
+                <div class="panel-heading">
+                  今日学况
+                </div>
+                <div class="panel-body">
+                  <div class="col-lg-3 col-sm-6">
+                    <div class="panel widget">
+                      <div class="panel-body text-center">
+                        <div class="text-right text-muted">
+                          <em class="icon-user-unfollow fa-2x"></em>
+                        </div>
+                        <h3 class="mt0">33</h3>
+                        <p class="text-muted">未学人数</p>
                       </div>
-                      <h3 class="mt0">33</h3>
-                      <p class="text-muted">未学人数</p>
                     </div>
                   </div>
-                </div>
 
-                <div class="col-lg-3 col-sm-6">
-                  <div class="panel widget">
-                    <div class="panel-body text-center">
-                      <div class="text-right text-muted">
-                        <em class="icon-clock fa-2x"></em>
+                  <div class="col-lg-3 col-sm-6">
+                    <div class="panel widget">
+                      <div class="panel-body text-center">
+                        <div class="text-right text-muted">
+                          <em class="icon-clock fa-2x"></em>
+                        </div>
+                        <h3 class="mt0">03:30:12</h3>
+                        <p class="text-muted">人均有效学习时长</p>
                       </div>
-                      <h3 class="mt0">03:30:12</h3>
-                      <p class="text-muted">人均有效学习时长</p>
                     </div>
                   </div>
-                </div>
-                <div class="col-lg-3 col-sm-6">
-                  <div class="panel widget">
-                    <div class="panel-body text-center">
-                      <div class="text-right text-muted">
-                        <em class="fa fa-star-half-o fa-2x"></em>
+                  <div class="col-lg-3 col-sm-6">
+                    <div class="panel widget">
+                      <div class="panel-body text-center">
+                        <div class="text-right text-muted">
+                          <em class="fa fa-star-half-o fa-2x"></em>
+                        </div>
+                        <h3 class="mt0">12</h3>
+                        <p class="text-muted">人均学币获取</p>
                       </div>
-                      <h3 class="mt0">12</h3>
-                      <p class="text-muted">人均学币获取</p>
                     </div>
                   </div>
-                </div>
-                <div class="col-lg-3">
-                  <div class="panel widget">
-                    <div class="panel-body text-center">
-                      <div class="text-right text-muted">
-                        <em class="fa fa-star fa-2x"></em>
+                  <div class="col-lg-3">
+                    <div class="panel widget">
+                      <div class="panel-body text-center">
+                        <div class="text-right text-muted">
+                          <em class="fa fa-star fa-2x"></em>
+                        </div>
+                        <h3 class="mt0">388</h3>
+                        <p class="text-muted">总学币获取</p>
                       </div>
-                      <h3 class="mt0">388</h3>
-                      <p class="text-muted">总学币获取</p>
                     </div>
                   </div>
-                </div>
 
+                </div>
               </div>
-            </div>
+            </a>
           </div>
         </div>
 
@@ -306,16 +316,28 @@
             <div id="" class="panel panel-primary">
               <div class="panel-heading">学况查询 </div>
               <div class="panel-body">
-                <div class="col-lg-3 col-sm-6">
-                  <div class="panel widget">
-                    <div class="panel-body text-center">
-                      <div class="text-right text-muted">
-                        <em class="icon-user-unfollow fa-2x"></em>
+                  <div class="form-group col-sm-12">
+                      <label class="col-sm-2">查询期限：</label>
+                      <div class="col-sm-4">
+                        <select name="" id="" class="form-control">
+                          <option value="">三天</option>
+                          <option value="1">七天</option>
+                          <option value="2">三十天</option>
+                        </select>
                       </div>
-                      <h3 class="mt0">33</h3>
-                      <p class="text-muted">未学人数</p>
                     </div>
-                  </div>
+                <div class="col-lg-3 col-sm-6">
+                  <a class="nodecation normalcolor" href="./studyreport_overall_threedaysnotstudy.html">
+                    <div class="panel widget">
+                      <div class="panel-body text-center">
+                        <div class="text-right text-muted">
+                          <em class="icon-user-unfollow fa-2x"></em>
+                        </div>
+                        <h3 class="mt0">33</h3>
+                        <p class="text-muted">未学人数</p>
+                      </div>
+                    </div>
+                  </a>
                 </div>
 
                 <div class="col-lg-3 col-sm-6">
