--- a/src/html/mall.html
+++ b/src/html/mall.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="../css/app.css" id="maincss">
   <link rel="stylesheet" href="../css/theme-e.css">
   <!-- endbuild -->
+
   <link rel="stylesheet" href="../css/wj.css">
 
 
@@ -25,7 +26,7 @@
 
 </head>
 
-<body>
+<body class="mall-body">
   <div class="wrapper mall-wrap">
     <!-- build:head -->
     <header class="topnavbar-wrapper">
@@ -65,6 +66,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -186,6 +188,7 @@
 
 
 
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
@@ -194,12 +197,20 @@
         </div>
         <div class="row">
           <div class="col-xs-12">
+            <div class="panel">
+              <div class="panel-heading portlet-handler ui-sortable-handle row">
+                <span class="text-info col-xs-1">￥我的学币</span>
+                <span class="text-info col-xs-1">10000</span>
+                <span class="col-xs-9">您的学生每增加1枚学币，您也将增加1枚学币（体验学员的学币不计算在内，请努力发展体验学员成为正式学员，成为正式学员时将一次性计入已有的学币）</span>
+                <a class="col-xs-1 jq-record" href="javascript:;">消费记录</a>
+              </div>
+            </div>
             <div class="col-xs-12 mb-20">
               <a class="wj-a" href="./studyreport_overall.html">总体报告</a>
               <a class="wj-a wj-a-active" href="javascript:;">全部报告</a>
             </div>
             <div class="col-xs-3">
-              <div class="panel panel-info">
+              <div class="panel panel-info cansell">
                 <div class="panel-heading portlet-handler ui-sortable-handle">库存 699件</div>
                 <div class="panel-body">
                   <img class="foot-img" src="../img/bg1.jpg" alt="商品图片">
@@ -214,7 +225,7 @@
               </div>
             </div>
             <div class="col-xs-3">
-              <div class="panel panel-danger">
+              <div class="panel panel-danger sellout">
                 <div class="panel-heading portlet-handler ui-sortable-handle">售罄</div>
                 <div class="panel-body">
                   <img class="foot-img" src="../img/bg1.jpg" alt="商品图片">
@@ -229,7 +240,7 @@
               </div>
             </div>
             <div class="col-xs-3">
-              <div class="panel panel-info">
+              <div class="panel panel-info cansell">
                 <div class="panel-heading portlet-handler ui-sortable-handle">库存 699件</div>
                 <div class="panel-body">
                   <img class="foot-img" src="../img/bg1.jpg" alt="商品图片">
@@ -244,7 +255,67 @@
               </div>
             </div>
             <div class="col-xs-3">
-              <div class="panel panel-info">
+              <div class="panel panel-info cansell">
+                <div class="panel-heading portlet-handler ui-sortable-handle">库存 699件</div>
+                <div class="panel-body">
+                  <img class="foot-img" src="../img/bg1.jpg" alt="商品图片">
+                </div>
+                <div class="panel-footer">
+                  <p>商品名称</p>
+                  <p>
+                    <span class="text-danger">￥ 1200学币</span>
+                    <button class="btn btn-primary pull-right">兑换</button>
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-3">
+              <div class="panel panel-info cansell">
+                <div class="panel-heading portlet-handler ui-sortable-handle">库存 699件</div>
+                <div class="panel-body">
+                  <img class="foot-img" src="../img/bg1.jpg" alt="商品图片">
+                </div>
+                <div class="panel-footer">
+                  <p>商品名称</p>
+                  <p>
+                    <span class="text-danger">￥ 1200学币</span>
+                    <button class="btn btn-primary pull-right">兑换</button>
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-3">
+              <div class="panel panel-danger sellout">
+                <div class="panel-heading portlet-handler ui-sortable-handle">售罄</div>
+                <div class="panel-body">
+                  <img class="foot-img" src="../img/bg1.jpg" alt="商品图片">
+                </div>
+                <div class="panel-footer">
+                  <p>商品名称</p>
+                  <p>
+                    <span>￥ 1200学币</span>
+                    <button class="btn pull-right">兑换</button>
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-3">
+              <div class="panel panel-info cansell">
+                <div class="panel-heading portlet-handler ui-sortable-handle">库存 699件</div>
+                <div class="panel-body">
+                  <img class="foot-img" src="../img/bg1.jpg" alt="商品图片">
+                </div>
+                <div class="panel-footer">
+                  <p>商品名称</p>
+                  <p>
+                    <span class="text-danger">￥ 1200学币</span>
+                    <button class="btn btn-primary pull-right">兑换</button>
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-3">
+              <div class="panel panel-info cansell">
                 <div class="panel-heading portlet-handler ui-sortable-handle">库存 699件</div>
                 <div class="panel-body">
                   <img class="foot-img" src="../img/bg1.jpg" alt="商品图片">
@@ -261,7 +332,36 @@
 
           </div>
         </div>
+        <!-- build:pages -->
+            <!-- 分页 -->
+            <div class="row">
+                <div class="pagination-fa col-lg-4 col-lg-offset-8 text-right">
+                  <ul class="pagination pagination-sm m0">
+                    <li>
+                      <a href="#" aria-label="Previous">
+                        <span aria-hidden="true">«</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">1</a>
+                    </li>
+                    <li>
+                      <a href="#">2</a>
+                    </li>
+                    <li class="active">
+                      <a href="#">3</a>
+                    </li>
+                    <li>
+                      <a href="#" aria-label="Next">
+                        <span aria-hidden="true">»</span>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </div>  
+              <!-- endbuild -->
       </div>
+      
     </section>
     <!-- 主要内容END -->
     
@@ -270,6 +370,7 @@
       <span>&copy; 2018 - 智厢逢</span>
     </footer>
     <!-- endbuild -->
+
 
 
 
@@ -291,6 +392,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 <script src="../js/mall.js"></script>
 
 
