--- a/src/html/studyreport_all_info_4.html
+++ b/src/html/studyreport_all_info_4.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="description" content="">
   <meta name="keywords" content="">
-  <title>学生兑换管理-未兑换</title>
+  <title>学习报告-详细记录</title>
   <!-- build:css -->
   <link rel="stylesheet" href="../js/vendor/fontawesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="../js/vendor/simple-line-icons/css/simple-line-icons.css">
@@ -18,7 +18,6 @@
   <link rel="stylesheet" href="../css/app.css" id="maincss">
   <link rel="stylesheet" href="../css/theme-e.css">
   <!-- endbuild -->
-
   <link rel="stylesheet" href="../css/wj.css">
 
 
@@ -65,6 +64,10 @@
       </nav>
     </header>
     <!-- endbuild -->
+
+
+
+
 
 
 
@@ -188,121 +191,87 @@
 
 
 
+
+
+
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
         <div class="content-heading">
-          未兑换
+          <div class="clearfix">
+              <span class="pull-left">张三（18000000000）的学习报告</span>
+              <button class="pull-right btn btn-info" type="button">返回</button>
+          </div>
+          <ol class="breadcrumb">
+            <li><a href="#">学习报告</a></li>
+            <li><a href="#">全部报告</a></li>
+            <li class="active">详细记录</li>
+          </ol>
         </div>
         <div class="row">
           <div class="col-xs-12">
-            <!-- START panel-->
-            <div class="panel-default">
-              <div class="panel-heading">
-                <form class="text-right form-lineH">
-                  <div class="row">
-                    <div class="form-group col-sm-2">
-                      <label class="radio-inline c-radio">
-                          <input type="radio" name="a" value="option1">
-                          <span class="fa fa-circle"></span>全部</label>
-                    </div>
-                    <div class="form-group col-sm-4">
-                        <label class="radio-inline c-radio col-sm-3">
-                            <input type="radio" name="a" value="option1">
-                            <span class="fa fa-circle"></span>选择班级</label>
-                      <div class="col-sm-8">
-                        <select name="" id="" class="form-control">
-                          <option value="">全部</option>
-                          <option value="1">未分班</option>
-                          <option value="2">过期学员</option>
-                        </select>
-                      </div>
-                    </div>
-                  </div>
-                </form>
+            <div class="mb-20">
+              <a class="wj-a" href="javascript:;">今日学况</a>
+              <a class="wj-a" href="javascript:;">学习日记</a>
+              <a class="wj-a" href="javascript:;">学习记录</a>
+              <a class="wj-a wj-a-active" href="javascript:;">学习地图</a>
+            </div>
+            <div class="panel panel-default">
+              <div class="panel-heading">学习时长</div>
+              <div class="panel-body">
+                <p><span class="width-100">在线时长</span><span>02:20:31</span></p>
+                <p><span class="width-100">有效时长</span><span>02:20:31</span></p>
+                <p><span class="width-100">有效时长占比</span><span>100%</span></p>
               </div>
               <!-- START table-responsive-->
-              <div class="panel-heading">
+            <div class="panel-heading">
                 <div class="table-responsive">
                   <table class="table table-bordered table-hover dataTable">
                     <thead>
                       <tr>
-                        <th data-check-all>
-                          <div data-toggle="tooltip" data-title="全选" class="checkbox c-checkbox">
-                            <label>
-                              <input class="jq-allcheck" type="checkbox">
-                              <span class="fa fa-check"></span>
-                            </label>
-                          </div>
-                        </th>
-                        <th class="sorting">下单时间</th>
-                        <th>兑换学员</th>
-                        <th>商品名称</th>
-                        <th>商品价格</th>
-                        <th>操作</th>
+                        <th class="sorting">开始时间</th>
+                        <th class="sorting">有效时间</th>
+                        <th>学习板块</th>
+                        <th>次级板块</th>
+                        <th>单元信息</th>
+                        <th>学习结果</th>
+                        <th>得分</th>
                       </tr>
                     </thead>
-                    <tbody>
+                    <tbody id="designerlist">
                       <tr>
-                        <td>
-                          <div class="checkbox c-checkbox">
-                            <label>
-                              <input type="checkbox">
-                              <span class="fa fa-check"></span>
-                            </label>
-                          </div>
-                        </td>
                         <td>2018-01-01 22:22:22</td>
-                        <td>学员名+学员手机</td>
-                        <td>商品名称商品名称</td>
-                        <td>10</td>
-                        <td>
-                          <a class="btn btn-primary jq-edit" href="javascript:;">兑换</a>
-                          <a class="btn btn-primary jq-cancle" href="javascript:;">取消</a>
-                        </td>
+                        <td>22:22:22</td>
+                        <td>同步课程-智学单词</td>
+                        <td>智能预习</td>
+                        <td>牛津上海版  七年级上册  Unit2</td>
+                        <td>完成</td>
+                        <td>120</td>
                       </tr>
                       <tr>
-                        <td>
-                          <div class="checkbox c-checkbox">
-                            <label>
-                              <input type="checkbox">
-                              <span class="fa fa-check"></span>
-                            </label>
-                          </div>
-                        </td>
                         <td>2018-01-01 22:22:22</td>
-                        <td>学员名+学员手机</td>
-                        <td>商品名称商品名称</td>
-                        <td>10</td>
-                        <td>
-                          <a class="btn btn-primary jq-edit" href="javascript:;">兑换</a>
-                          <a class="btn btn-primary jq-cancle" href="javascript:;">取消</a>
-                        </td>
+                        <td>22:22:22</td>
+                        <td>同步课程-智学单词</td>
+                        <td>智能预习</td>
+                        <td>牛津上海版  七年级上册  Unit2</td>
+                        <td>完成</td>
+                        <td>120</td>
                       </tr>
                       <tr>
-                        <td>
-                          <div class="checkbox c-checkbox">
-                            <label>
-                              <input type="checkbox">
-                              <span class="fa fa-check"></span>
-                            </label>
-                          </div>
-                        </td>
                         <td>2018-01-01 22:22:22</td>
-                        <td>学员名+学员手机</td>
-                        <td>商品名称商品名称</td>
-                        <td>10</td>
-                        <td>
-                          <a class="btn btn-primary jq-edit" href="javascript:;">兑换</a>
-                          <a class="btn btn-primary jq-cancle" href="javascript:;">取消</a>
-                        </td>
+                        <td>22:22:22</td>
+                        <td>同步课程-智学单词</td>
+                        <td>智能预习</td>
+                        <td>牛津上海版  七年级上册  Unit2</td>
+                        <td>完成</td>
+                        <td>120</td>
                       </tr>
                     </tbody>
                   </table>
-                  <a class="btn btn-primary jq-all" href="javascript:;">批量兑换</a>
-                  <a class="btn btn-primary jq-qllcancle" href="javascript:;">批量取消</a>
+                  <a class="btn btn-primary jq-changeclass" href="javascript:;">调换班级</a>
                 </div>
-
+  
                 <!-- build:pages -->
                 <!-- 分页 -->
                 <div class="row">
@@ -331,30 +300,34 @@
                   </div>
                 </div>  
                 <!-- endbuild -->
-
-
-
-
-
-
-
-
-
-
-
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
               </div>
             </div>
+            
           </div>
         </div>
       </div>
     </section>
     <!-- 主要内容END -->
-    
+
     <!-- build:foot -->
     <footer>
       <span>&copy; 2018 - 智厢逢</span>
     </footer>
     <!-- endbuild -->
+
+
+
+
 
 
 
@@ -378,7 +351,11 @@
   <script src="../js/app.js"></script>
   <!-- endbuild -->
 
-  <script src="../js/exchangemanagement.js"></script>
+
+
+
+
+
 
 
 
